--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,17 +53,34 @@ input[type="text"], label, select, button, textarea {margin:0;border:0;padding:0
 
 /* Slider
 ================================================== */
-#slider {width:100%;text-align:center;position:relative;min-height:325px;background:#f1f1f1}.rslides{position:relative;list-style:none;overflow:hidden;width:100%;padding:0;margin:0}.rslides li{-webkit-backface-visibility:hidden;position:absolute;display:none;width:100%;left:0;top:0}.rslides li:first-child{position:relative;display:block;float:left}.rslides img{display:block;height:auto;float:left;width:100%;border:0}.rslides_tabs{position:absolute;right:70px;margin:0 auto;text-align:center;bottom:20px;z-index:990;padding:0}.rslides_tabs li{display:inline;float:none;_float:left;*float:left;margin-right:5px}.rslides_tabs a{text-indent:-9999px;overflow:hidden;-webkit-border-radius:15px;-moz-border-radius:15px;border-radius:15px;background:#393E4E;display:inline-block;_display:block;*display:block;width:14px;height:14px}.rslides_here a,.rslides_tabs a:hover{background:#C03636}
+#slider {position:relative;width:100%;min-height:400px}
+#slider .rslides {display:none;position: relative;list-style: none;overflow: hidden;width: 100%;padding: 0;margin: 0}
+#slider .rslides li {-webkit-backface-visibility: hidden;position: absolute;display: none;width: 100%;left: 0;top: 0}
+#slider .rslides li:first-child {position: relative;display: block;float: left}
+#slider .rslides img {display: block;height: auto;float: left;width: 100%;border: 0}
+#slider .rslides_tabs {position: absolute;right:70px;margin:0 auto;text-align: center;bottom:20px;z-index: 990;padding:0}
+#slider .rslides_tabs li {display: inline;float: none;_float: left;*float: left;margin-right: 5px}
+#slider .rslides_tabs a {text-indent: -9999px;overflow: hidden;-webkit-border-radius: 15px;-moz-border-radius: 15px;border-radius: 15px;background:#F58025;display: inline-block;_display: block;*display: block;width:14px;height:14px}
+#slider .rslides_here a, #slider .rslides_tabs a:hover {background:#fff}
 
-.rslides_nav{z-index:3;position:absolute;top:0;bottom:0;margin:auto;overflow:hidden;text-decoration:none;display:block;text-align:center;width:107px;height:107px;font-size:95px;color:white}
-.rslides_nav:hover {background:rgba(0,139,170, 0.2);color:white}
-.rslides_nav:before{position:absolute;top:-21px}
-.rslides_nav.next:before{font-family:"FontAwesome";content:"\f105";text-align:center;font-size:95px;right:32px}
-.rslides_nav.next:hover:before{color:white}
-.rslides_nav.prev:before{font-family:"FontAwesome";content:"\f104";text-align:center;font-size:95px;left:32px}
-.rslides_nav.prev:hover:before{color:white}
-.rslides_nav.next{right:20px}
-.rslides_nav.prev{left:20px}
+#slider .rslides_nav {line-height: 116px;z-index: 3;position: absolute;top:0;bottom:0;margin:auto;text-decoration: none;display:block;text-align:center;color:white;-webkit-transition:all 200ms linear;-moz-transition:all 200ms linear;-o-transition:all 200ms linear;transition:all 200ms linear;width:85px;height:135px}
+
+#slider .rslides_nav.next:before {display: block;line-height: 116px;font-family:"FontAwesome";content:"\f105";text-align:center;font-size:72px;width:85px;height:135px}
+#slider .rslides_nav.prev:before {display: block;line-height: 116px;font-family:"FontAwesome";content:"\f104";text-align:center;font-size:72px;width:85px;height:135px}
+#slider .rslides_nav.next {left: auto;right:17px}
+#slider .rslides_nav.prev {right: auto;left:17px}
+
+#slider .apla {width:380px;position:absolute;bottom:40px;left:40px}
+#slider .apla h2 {
+    position:relative;
+    color:white;
+    font-size:29px;
+    font-weight:500;
+    font-family:'Ubuntu', sans-serif;
+    text-transform:uppercase;
+    margin:0;
+    padding:15px 15px;background: rgba(0, 0, 0, 0.4)
+}
 
 /* Informacja o ciasteczkach
 ================================================== */
@@ -112,7 +129,7 @@ input[type="text"], label, select, button, textarea {margin:0;border:0;padding:0
 /* Aktualnosci
 ================================================== */
 #news-list .list-post-date {font-size:12px;color:#9e9e9e}
-#news-list h2 {margin: 0 0 10px;padding-bottom: 20px;border-bottom: 1px solid #f6f6f6;}
+#news-list h2 {margin: 0 0 10px;padding-bottom: 8px;border-bottom: 1px solid #f6f6f6;}
 #news-list h2 a, #news-list h2 {font-size: 31px;color: #1774a4}
 #news-list .list-post-entry p {font-size: 14px}
 
