--- a/public/css/app.css
+++ b/public/css/app.css
@@ -70,7 +70,17 @@ input[type="text"], label, select, button, textarea {margin:0;border:0;padding:0
 #slider .rslides_nav.next {left: auto;right:17px}
 #slider .rslides_nav.prev {right: auto;left:17px}
 
-#slider .apla {width:380px;position:absolute;bottom:40px;left:40px}
+#slider .apla {
+    width: 380px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    top: 0;
+    right: 0;
+    margin: auto;
+    text-align: center;
+    height: 65px;
+}
 #slider .apla h2 {
     position:relative;
     color:white;
@@ -80,6 +90,21 @@ input[type="text"], label, select, button, textarea {margin:0;border:0;padding:0
     text-transform:uppercase;
     margin:0;
     padding:15px 15px;background: rgba(0, 0, 0, 0.4)
+}
+
+/* Boksy na stronie głównej
+================================================== */
+#mainbox {position: relative;z-index: 999;padding-bottom: 40px}
+.boks {margin: -70px 0 0}
+.boks h4 {color:#1774a4}
+.boks img {
+    height: 60px;
+    margin: 0 auto;
+}
+.boks .title {
+    font-size: 18px;
+    letter-spacing: 1px;
+    font-weight: 700;
 }
 
 /* Informacja o ciasteczkach
@@ -130,7 +155,7 @@ input[type="text"], label, select, button, textarea {margin:0;border:0;padding:0
 ================================================== */
 #news-list .list-post-date {font-size:12px;color:#9e9e9e}
 #news-list h2 {margin: 0 0 10px;padding-bottom: 8px;border-bottom: 1px solid #f6f6f6;}
-#news-list h2 a, #news-list h2 {font-size: 31px;color: #1774a4}
+#news-list h2 a, #news-list h2 {text-transform: uppercase;font-size: 31px;color: #1774a4}
 #news-list .list-post-entry p {font-size: 14px}
 
 article {border-bottom: 1px solid #f6f6f6;margin-bottom:30px;padding-bottom:30px}
@@ -164,8 +189,6 @@ article {border-bottom: 1px solid #f6f6f6;margin-bottom:30px;padding-bottom:30px
 
 /* Paginacja
 ================================================== */
-
-
 .pagination {
     margin: 0 auto;
     text-align: center;
