--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -6,7 +6,7 @@ font-family: 'Muli', sans-serif;
 
 /* Nadpisz Bootstrap
 ================================================== */
-body, html {background:#f1f2f7}
+body, html {background:#f1f2f7;height:100%}
 body {font-family: 'Muli', sans-serif}
 a:hover {text-decoration:none}
 img {display:block;max-width: 100%;height: auto}
@@ -163,6 +163,8 @@ p {margin:0}
 
 /* Formularze
 ================================================== */
+.formError{position:absolute;top:300px;left:300px;display:block;z-index:500;cursor:pointer}.formError .formErrorContent{background:#ff9000;position:relative;z-index:5001;color:#fff;width:190px;font-size:12px;border:1px solid #ff9000;padding:2px 10px 2px 10px}.formError .formErrorArrow{width:12px;margin:-2px 0 0 1px;position:relative;z-index:5006}.formError .formErrorArrowBottom{box-shadow:none;-moz-box-shadow:none;-webkit-box-shadow:none;margin:0 0 0 12px;top:2px}.formError .formErrorArrow div{font-size:0;height:1px;background:#ff9000;margin:0 auto;line-height:0;font-size:0;display:block}.formError .formErrorArrowBottom div{box-shadow:none;-moz-box-shadow:none;-webkit-box-shadow:none}.formError .formErrorArrow .line10{width:15px;border:0}.formError .formErrorArrow .line9{width:13px;border:0}.formError .formErrorArrow .line8{width:11px}.formError .formErrorArrow .line7{width:9px}.formError .formErrorArrow .line6{width:7px}.formError .formErrorArrow .line5{width:5px}.formError .formErrorArrow .line4{width:3px}.formError .formErrorArrow .line3{width:1px}.formError .formErrorArrow .line2{width:0}.formError .formErrorArrow .line1{width:0}.inputbox-error{border-bottom:1px solid #ff9000!important}
+
 #form {margin-bottom:40px}
 .col-form-label {
 	line-height: 15px;
@@ -190,15 +192,16 @@ p {margin:0}
 }
 
 .card {
-  position: relative;
-  background-color: #ffffff;
-  margin-top: 25px;
-  border: 1px solid #e9eaec;
-  border-radius: 0;
-  transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
+    position: relative;
+    background-color: #ffffff;
+    margin-top: 25px;
+    border: 1px solid #e9eaec;
+    border-radius: 0;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    box-shadow: 0 10px 40px 0 rgba(62, 57, 107, 0.07), 0 2px 9px 0 rgba(62, 57, 107, 0.06);
 }
 
 .card.card-shadow {
@@ -236,8 +239,9 @@ p {margin:0}
     transition:all .2s;
     margin-bottom: 0;
 }
-.form-group-submit .btn {padding: .375rem 2.95rem;border-radius:0;border:0;background:#00acc1}
-.form-group-submit .btn:hover {background:#008595}
+#login {background:#f1f2f7}
+.form-group-submit .btn, #login .btn {padding: .375rem 2.95rem;border-radius:0;border:0;background:#00acc1}
+.form-group-submit .btn:hover, #login .btn:hover {background:#008595}
 .btn.focus, .btn:focus, .form-control:focus {
 	outline: 0;
 	box-shadow: 0 0 0 0 rgba(0,123,255,.25) !important;
@@ -568,3 +572,8 @@ ul#sortable li {padding-top:20px}
 }
 .namelist {padding: 7px 0;float: left}
 
+@media screen and (max-width:768px) {
+    .col-form-label {
+        padding-bottom: 8px;
+    }
+}
