--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -161,6 +161,8 @@ p {margin:0}
 .nav a.nav-link.active, a.nav-link:hover {color:#00acc1}
 .nav [class^=fe-] {margin-right:5px}
 
+.content h4 a {color:#00acc1;}
+
 /* Formularze
 ================================================== */
 .formError{position:absolute;top:300px;left:300px;display:block;z-index:500;cursor:pointer}.formError .formErrorContent{background:#ff9000;position:relative;z-index:5001;color:#fff;width:190px;font-size:12px;border:1px solid #ff9000;padding:2px 10px 2px 10px}.formError .formErrorArrow{width:12px;margin:-2px 0 0 1px;position:relative;z-index:5006}.formError .formErrorArrowBottom{box-shadow:none;-moz-box-shadow:none;-webkit-box-shadow:none;margin:0 0 0 12px;top:2px}.formError .formErrorArrow div{font-size:0;height:1px;background:#ff9000;margin:0 auto;line-height:0;font-size:0;display:block}.formError .formErrorArrowBottom div{box-shadow:none;-moz-box-shadow:none;-webkit-box-shadow:none}.formError .formErrorArrow .line10{width:15px;border:0}.formError .formErrorArrow .line9{width:13px;border:0}.formError .formErrorArrow .line8{width:11px}.formError .formErrorArrow .line7{width:9px}.formError .formErrorArrow .line6{width:7px}.formError .formErrorArrow .line5{width:5px}.formError .formErrorArrow .line4{width:3px}.formError .formErrorArrow .line3{width:1px}.formError .formErrorArrow .line2{width:0}.formError .formErrorArrow .line1{width:0}.inputbox-error{border-bottom:1px solid #ff9000!important}
@@ -304,6 +306,35 @@ p {margin:0}
     padding: 20px 30px;
     margin: 1rem -20px;
 }
+
+/* Mappa
+================================================== */
+.mappa-tool {padding:10px}
+.mappa-toolbars {padding:10px 0}
+.mappa-toolbars ul, .mappa-toolbars li, .mappa-toolbars label, .toggleParam {display:inline-block;cursor: pointer}
+
+label.actionBtn, .toggleParam {
+    padding: .375rem 0.65rem;
+    border-radius: 0;
+    border: 0;
+    background: #00acc1;
+    font-size: 12px;
+    color: white;
+}
+label.actionBtn:hover, .toggleParam:hover {
+    background: #008595;
+    color: white;
+}
+label.actionBtn i, .toggleParam i {margin-right:0.35rem}
+
+span.actionBtn {display:block;margin-right: 30px;padding: 8px 13px 7px;cursor:pointer;float:left}
+.mappa-output textarea {width:98%;padding:1%;height:120px;background:none;color:white;border:1px solid #3f4446}
+.mappa-list li.selected-false {display:none}
+.mappa-list li.selected-true {display:block}
+.input_hidden {position:absolute;left:-9999px}
+.mappa-toolbars input[type="radio"]:checked + label.actionBtn {background: #008595}
+.mappa-list li select {background:none;color:white;border:1px solid #3f4446;padding:4px;margin-left:10px}
+.toggleRow {display:none}
 
 /* DeveloPro
 ================================================== */
