--- a/public/css/app.css
+++ b/public/css/app.css
@@ -235,6 +235,30 @@ article {border-bottom: 1px solid #f6f6f6;margin-bottom:30px;padding-bottom:30px
 
 
 
+/* Plan
+================================================== */
+#plan {position: relative}
+#plan-holder {
+    position: relative;
+    z-index: 99;
+    background: white;
+}
+.plan-control {
+    position: absolute;
+    top: 1px;
+    right: -41px;
+    z-index: 80;
+}
+.plan-control a {
+    display: block;
+    color: white;
+    margin: 6px 0;
+    line-height: 13px;
+    right: 0;
+}
+.plan-control a span {background:#1071b8;color:#fff;float:right;margin-left:20px;font-weight:600;z-index:10;padding:10px 17px}
+.plan-control .panel-map-name {background:#1071b8}
+
 /* Kontakt
 ================================================== */
 .formError{position:absolute;top:300px;left:300px;display:block;z-index:500;cursor:pointer}.formError .formErrorContent{background:#ff9000;position:relative;z-index:5001;color:#fff;width:190px;font-size:12px;border:1px solid #ff9000;padding:2px 10px 2px 10px}.formError .formErrorArrow{width:12px;margin:-2px 0 0 1px;position:relative;z-index:5006}.formError .formErrorArrowBottom{box-shadow:none;-moz-box-shadow:none;-webkit-box-shadow:none;margin:0 0 0 12px;top:2px}.formError .formErrorArrow div{font-size:0;height:1px;background:#ff9000;margin:0 auto;line-height:0;display:block}.formError .formErrorArrowBottom div{box-shadow:none;-moz-box-shadow:none;-webkit-box-shadow:none}.formError .formErrorArrow .line10{width:15px;border:0}.formError .formErrorArrow .line9{width:13px;border:0}.formError .formErrorArrow .line8{width:11px}.formError .formErrorArrow .line7{width:9px}.formError .formErrorArrow .line6{width:7px}.formError .formErrorArrow .line5{width:5px}.formError .formErrorArrow .line4{width:3px}.formError .formErrorArrow .line3{width:1px}.formError .formErrorArrow .line2{width:0}.formError .formErrorArrow .line1{width:0}.inputbox-error{border-bottom:1px solid #ff9000!important}
