Leaflet features: - add, edit, remove markers as admin - get position on click and set inputs - get position when drag marker and set inputs - show all markers on front with fitBounds function

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -401,6 +401,10 @@ span.actionBtn {display:block;margin-right: 30px;padding: 8px 13px 7px;cursor:po
     z-index: 1040
 }
 
+/* Mapa
+================================================== */
+#map {height:400px}
+
 /* Upload
 ================================================== */
 .progress-bar {
